--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.0",
+    "@google/genai": "^1.27.0",
+    "@tanstack/react-query": "^5.90.7",
+    "axios": "^1.13.2",
+    "jwt-decode": "^4.0.0",
+    "keycloak-js": "^26.2.1",
     "react": "^19.2.0",
-    "@google/genai": "^1.27.0"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "cross-env": "^10.1.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
